# jmpool

./: .gitignore  CMakeLists.txt  README.org  build.sh  jmpool.h
jmp/: jmp_allocator.h  jmp_construct.h  jmp_inner_inc.h
src/: CMakeLists.txt  jmp_allocator.cpp
tests/: CMakeLists.txt  allocator.cpp  construct.cpp
